
$Id$


2007.August.11 (0.9.18)
  * Interface Improvements:
    -----------------------
    * Improved 'New' and 'Open' interface:
      + 'Open' dialog no longer includes 'Starter' images
      + 'New' now brings up a selection dialog showing 'Starter' images
        and color choices
      + New images can be given solid background colors
        (which the 'Eraser' tool erases to)

  * Tool Improvements:
    ------------------
    * Added a 'color picker' entry to the color palette; allows choosing
      from over 50,000 colors.  Used by drawing and Magic tools, as well
      as the new 'New' dialog.

    * Added an Octagon shape to the 'Shapes' tool.

    * Stamps can now be pre-flipped and/or pre-mirrored-and-flipped now
      (in addition to pre-mirrored).
      Use "_flip.png"/"_flip.svg" and "_mirror_flip.png"/"_mirror_flip.png",
      respectively.

  * Documentation Imrpovements:
    ---------------------------
    * Improved --usage output.

    * Added support for "--papersize help" to list papersizes available
      via libpaper.

  * System-Related Improvements:
    ----------------------------
    * Added an API for developing Magic tools as plug-ins.
      ('.so' shared objects under Linux, '.dll' libraries under Windows, etc.)
      Plugins must provide a number of functions that Tux Paint calls,
      and Tux Paint provides a structure ("magic_api") that includes info.
      (e.g., the running Tux Paint's version number) and pointers to
      useful functions (e.g., getpixel(), putpixel(), etc.)

    * Magic plugin development can be done outside of Tux Paint base
      source-code by using new "tp-magic-config" shell script to query
      for C compiler flags (which points to where "tp_magic_api.h" header
      file is installed) and directories Tux Paint uses (where plugin '.so'
      files should be stored, and where Tux Paint's global data files and
      documentation go).
