@@ -19,6 +19,9 @@ $Id$
       + New images can be given solid background colors
         (which the 'Eraser' tool erases to)
 
+    * Sped up prompt animations, and made them 'fly' from their sources
+      (e.g., quit confirmation flies from Quit button), when possible.
+
   * Tool Improvements:
     ------------------
     * Added a 'color picker' entry to the color palette; allows choosing
